// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSerialization 1`] = `"{\\"rand\\":123,\\"y\\":true}"`;

exports[`JSONSerialization undefined special handling: false 1`] = `"{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1}"`;

exports[`JSONSerialization undefined special handling: false 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
}
`;

exports[`JSONSerialization undefined special handling: keep 1`] = `"{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"result\\":null,\\"undef\\":true}"`;

exports[`JSONSerialization undefined special handling: keep 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": undefined,
}
`;

exports[`JSONSerialization undefined special handling: null 1`] = `"{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"result\\":null}"`;

exports[`JSONSerialization undefined special handling: null 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": null,
}
`;

exports[`JSONSerialization undefined special handling: undefined 1`] = `"{\\"jsonrpc\\":\\"2.0\\",\\"id\\":1,\\"result\\":null}"`;

exports[`JSONSerialization undefined special handling: undefined 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": null,
}
`;

exports[`JSONSerialization with replacer 1`] = `
"{
    \\"week\\": 45,
    \\"month\\": 7
}"
`;

exports[`JSONSerialization with replacer 2`] = `
Object {
  "month": 14,
  "week": 90,
}
`;
